--- a/CSS/index.html
+++ b/CSS/index.html
@@ -22,11 +22,7 @@
 
     <div id="content">
 
-        <!-- <aside id="authorInfo">
-            <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000011_1549316247_author-pic.png" alt="imageLogo">
-            <p>kannumittal</p>
-            <p>Web Development</p>
-        </aside>  -->
+      
         <main>
 
             <header id="blog-header">
@@ -34,6 +30,9 @@
             </header>
 
             <div id="author-container">
+                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000011_1549316247_author-pic.png" alt="imageLogo">
+                <p>kannumittal</p>
+                <p>Web Development</p>
             </div>
 
             <article id="blog-content">
@@ -135,7 +134,7 @@
             </section>
 
             <section id="recent-posts" class="widget">
-                <h4>RECENT POSTS</h4>
+                <h4 class="widget-title">RECENT POSTS</h4>
                 <ul>
                     <li>
                         <p><a href="">Guiding path for a fresher to start their career in software programming/development</a></p>
