--- a/CSS/Answers/index.html
+++ b/CSS/Answers/index.html
@@ -18,11 +18,9 @@
             <img src="https://ninjasfiles.s3.amazonaws.com/0000000000001395.png" alt="coding ninjas love coding">
         </div>
     </header>
-  
 
     <div id="content">
 
-      
         <main>
 
             <header id="blog-header">
@@ -130,12 +128,15 @@
             </section>
 
             <section id="search" class="widget">
-                <input type="search" name="search" id="searchBox" placeholder="Search..">
-                <button type="submit" id="searchButton"><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000013_1549319004_search-icon.png" alt="search button"></button>
+                <form action="">
+                    <input type="text" placeholder="Search..." />
+                    <button type="submit"><img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000013_1549319004_search-icon.png"></button>
+                </form>
             </section>
 
             <section id="recent-posts" class="widget">
-                <h4 class="widget-title">RECENT POSTS</h4>
+                <h4 class="widget-title">Recent Posts</h4>
+
                 <ul>
                     <li>
                         <p><a href="">Guiding path for a fresher to start their career in software programming/development</a></p>
@@ -216,6 +217,20 @@
             </section>
 
         </aside>
+        
+        <div id="social">
+            <a id="facebook" class="social-btn" target="_blank" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F03%2F13%2Fa-step-by-step-walk-through-of-your-first-html-page%2F"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000014_1549330414_facebook-logo.png" alt="fb"></a>
+
+            <a id="linkedin" class="social-btn" target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&title=Best+Coding+Practices+for+Hassle-free+Programming&url=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F04%2F02%2Fbest-coding-practices-for-hassle-free-programming%2F"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000015_1549330433_linkedin-logo.png" alt="in"></a>
+
+            <a id="twitter" class="social-btn" target="_blank" href="https://twitter.com/share?url=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F04%2F02%2Fbest-coding-practices-for-hassle-free-programming%2F&text=Best+Coding+Practices+for+Hassle-free+Programming"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000016_1549330452_twitter-logo.png" alt="twi"></a>
+
+            <a id="gmail" class="social-btn" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F04%2F02%2Fbest-coding-practices-for-hassle-free-programming%2F"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000017_1549330467_google-logo.png" alt="g+"></a>
+
+            <a id="whatsapp" class="social-btn" target="_blank" href="whatsapp://send?text=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F04%2F02%2Fbest-coding-practices-for-hassle-free-programming%2F"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000018_1549330485_whatsapp-logo.png" alt="w-app"></a>
+
+            <a id="mail" class="social-btn" target="_blank" href="mailto:adresse@example.com?subject=7%20best%20coding%20practices%20to%20follow%20%7C%20blog.codingninjas.in&body=http%3A%2F%2Fblog.codingninjas.in%2F2018%2F04%2F02%2Fbest-coding-practices-for-hassle-free-programming%2F"><img class="social-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000019_1549330510_mail-logo.png" alt="mail"></a>
+        </div>
 
     </div>
 
